# AIEngineeringExecutionPlatform

./: .coverage  .gitignore  README.md  app.py  main.py  pyproject.toml  start.bat
aeep/agents/: __init__.py  base_agent.py  models.py  multi_agent.py  tool_registry.py
aeep/benchmark/: __init__.py  leaderboard.py  runner.py  suite.py  tracker.py
aeep/config/: provider_config.py  settings.py
aeep/core/: error_handler.py
aeep/memory/: __init__.py  long_term.py  memory_store.py  short_term.py
aeep/observability/: alerting.py  logging.py  metrics.py  tracing.py
aeep/prompts/: __init__.py  optimizer.py  store.py  template.py
aeep/providers/: base.py  cost_tracker.py  fallback.py  registry.py
aeep/security/: __init__.py  input_validator.py  key_manager.py
aeep/validation/: __init__.py  engine.py  models.py  quality_gate.py  report.py
aeep/workflow/: __init__.py  dag.py  plugins.py  retry.py  runner.py  state.py
cli/: __init__.py  main.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEFINITION_OF_DONE.md  MILESTONE_PLAN.md  P0_PROJECT_KICKOFF.md  P10_PRODUCTION_HARDENING.md  P1_MILESTONE_PLANNING.md  P2_DEFINITION_OF_DONE.md  P3_VALIDATION_FIRST_DESIGN.md  P4_PROVIDER_FRAMEWORK_DESIGN.md  P5_CORE_ENGINE_IMPL.md  P6_PROVIDER_IMPL.md  P7_WORKFLOW_ENGINE_IMPL.md  P8_AGENT_AND_MEMORY_IMPL.md  P9_VALIDATION_BENCHMARK_IMPL.md  PROVIDER_FRAMEWORK_DESIGN.md  PROVIDER_SETUP.md  QUICKSTART.md  README.md  VALIDATION_FIRST_DESIGN.md  WORKFLOW_GUIDE.md
outputs/: demo_report.md
scripts/: ci_benchmark.py  demo_task.py
tests/: test_agent_e2e.py  test_agent_live.py
tests/unit/: test_config.py  (+3 more)
(+84 files in other folders)
