[project]
name = "aeep"
version = "0.1.0"
description = "AI Engineering Execution Platform"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "tiktoken>=0.7",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "jsonschema>=4.26.0",
    "bandit>=1.9.4",
    "typer>=0.25.1",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
]
api = [
    "openai>=1.35",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aeep"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aeep --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "aeep/providers/browser/*"]

[dependency-groups]
dev = [
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
]
